update booking service